2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/unknown_functions.exp: Move -Wl,-x to ldflags.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/rn-dl-bind.exp: Replace reverse-step with
	reverse-continue to breakpoint.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/delta.exp: Remove instruction-history and
	function-call-history checks.

2021-03-03  Markus Metzger  <markus.t.metzger@intel.com>

	* README (Note): Add nopie_ldflag.
	* lib/gdb.exp (gdb_compile): Extend nopie handling.

2020-11-24  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak-multi-context.exp: Do not hard-code location
	indices.

2020-10-27  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak.exp: Update the completion tests to
	consider the '-force' flag.

2020-10-30  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/paginate-after-ctrl-c-running.exp: Update with no pagination
	behavior.
	* gdb.base/paginate-bg-execution.exp: Ditto.
	* gdb.base/paginate-inferior-exit.exp: Ditto.
	* gdb.base/double-prompt-target-event-error.c: Remove.
	* gdb.base/double-prompt-target-event-error.exp: Remove.

2020-10-29  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/kill-detach-inferiors-cmd.exp: Check that 'kill
	inferiors' and 'detach inferiors' do not change the current
	inferior.

2020-10-22  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak-multi-context.exp: Expand to test forcing
	the condition.
	* gdb.linespec/cpcompletion.exp: Update to consider the
	'-force-condition' keyword.
	* gdb.linespec/explicit.exp: Ditto.
	* lib/completion-support.exp: Ditto.

2020-10-22  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>

	* gdb.base/condbreak-multi-context.cc: New file.
	* gdb.base/condbreak-multi-context.exp: New file.

2021-04-23  Tom Tromey  <tromey@adacore.com>

	PR gdb/27743: